--- a/src/assets/lang/settings.json
+++ b/src/assets/lang/settings.json
@@ -4,7 +4,7 @@
     "en": "English"
   },
   "activeLangs": ["ru", "en"],
-  "default": "ru",
+  "default": "en",
   "defaultCurrency": {
     "name": "rub",
     "symbol": "₽",
